--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "muter-poll-mobile",
     "slug": "muter-poll-mobile",
-    "version": "1.0.1",
+    "version": "1.0.3",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -25,7 +25,8 @@
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.tjcharm.muterpollmobile",
-      "permissions": "[]"
+      "permissions": [],
+      "versionCode": 3
     },
     "web": {
       "favicon": "./assets/favicon.png"
